2011-11-03  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-sync.el: More commentary about setup.

2011-11-03  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-send-and-exit): Document `arg'.

2011-11-02  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-sync.el: More commentary about `gnus-sync-read' issues.

	* gnus-util.el (gnus-bound-and-true-p): Another comment to explain why
	we don't use `bound-and-true-p'.

2011-11-01  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-util.el (gnus-bound-and-true-p): Remove.
	(gnus-bound-and-true-dumber-p): Rename to `gnus-bound-and-true-p'.
	* nnir.el: Use it.
	* nnmairix.el: Use it.

2011-10-31  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-sync.el: Improve docs about CouchDB admins.

	* gnus-util.el (gnus-bound-and-true-dumber-p): Define new, slower, dumb
	function because `gnus-bound-and-true-p' doesn't work well in XEmacs
	for reasons unknown.
	* nnir.el: Use it.
	* nnmairix.el: Use it.

	* nnregistry.el: Remove unnecessary `gnus-registry-enabled' defvar.
	* nnir.el: Ditto.
	* nnmairix.el: Ditto.

	* gnus-registry.el (gnus-registry-enabled): Default to nil.

2011-10-29  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-sync.el (gnus-sync-lesync-setup): Fix salt when user setup is
	not needed.  Provide xmlplistread list function to produce XML plist
	output for non-Gnus LeSync clients.

2011-10-27  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-fallback-lib/json.el: Add for XEmacs and Emacs 22 support.

	* gnus-sync.el: Add LeSync synchronization backend and logic to read
	and save against it.  Group subscriptions, read marks, other marks,
	subscription levels, topic names, and topic offsets (the group's
	position within the topic) are saved.  This is an experimental backend
	and may change significantly.  Load json.el from the gnus-fallback-lib
	if it's not available otherwise.
	(gnus-sync-save): Don't use `apply-partially' because of XEmacs.

2011-10-26  Stefan Monnier  <monnier@iro.umontreal.ca>
